k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-management
  namespace: employee-management
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: employee.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: employee-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employee-frontend
                port:
                  number: 80
